# django-boilerplate

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  esbuild.config.js  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  tailwind.config.js
config/: asgi.py  example.env  settings.py  urls.py  wsgi.py
