[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = ""
authors = ["tsarbas"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
flake8 = "^7.0.0"
flake8-commas = "^2.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
